output/illustrative_examples/figure2_CF/explanation_from_other_techniques/explanation_PEM_3.12.txt
line 1
    for i in range(int(input()):
                               ^
SyntaxError: invalid syntax